tree-sitter-duper/test/corpus/bytes.txt
==================
Quoted bytes
==================

b"\x1b\t\x00"

---

(duper_value
  (bytes
    (quoted_bytes
      (quoted_content
        (quoted_escape)
        (quoted_escape)
        (quoted_escape)))))

==================
Raw bytes
==================

br"¯\_(ツ)_/¯"

---

(duper_value
  (bytes
    (raw_bytes
      (raw_start)
      (raw_content)
      (raw_end))))

==================
Base64 bytes
==================

b64"RHVwZXI"

---

(duper_value
  (bytes
    (base64_bytes
      (base64_content))))
