tree-sitter-duper/test/corpus/keywords.txt
==================
True
==================

true

---

(duper_value
  (boolean))

==================
False
==================

false

---

(duper_value
  (boolean))

==================
Null value
==================

null

---

(duper_value
  (null))
